<resources>
    <string name="app_name">DnevnikMassaTela</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Имя</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Пароль</string>
    <string name="hint_confirm_password">Повторите пароль</string>
    <string name="hint_data">Дата Рождения: yyyy-мм-dd</string>
    <string name="hint_weight">Вес тела</string>
    <string name="hint_height">Ваш рост (см)</string>
    <string name="hint_gender">Ваш пол</string>
    <string name="text_login">Войти</string>
    <string name="text_register">Регистрация</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Введите возраст</string>
    <string name="error_message_password">Введите пароль</string>
    <string name="success_message">Регистрация прошла успешно!</string>
    <string name="text_not_member">Нет учетной записи? Создайте</string>
    <string name="text_already_member">Уже зарегистрированы? Войдите</string>
    <string name="error_email_exists">Эл.почта уже существует</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Введите эл.почту и пароль</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Android Tutorials Hub</string>
    <string name="error_message_data">error_message_data</string>
    <string name="error_message_weight">error_message_weight</string>
    <string name="error_message_height">error_message_height</string>
    <string name="error_message_gender">Вы не выбрали пол</string>
    <string name="desc">logo</string>
    <string name="zamer">вес</string>
    <string name="find">Введите ваш продукт</string>
    <string name="zap">Запомнить данные</string>
    <string name="Man">Мужчина</string>
    <string name="Woman">Женщина</string>
    <string name="writing_title">Статья</string>
    <string name="string_sovet">Лента статей</string>

    <string-array name="AcrivnostName">
        <item>Сидячий образ жизни</item>
        <item>Легкая активность</item>
        <item>Умеренная активность</item>
        <item>Активный образ жизни</item>
        <item>Очень активный образ жизни</item>
    </string-array>
</resources>